fix #16 option to delete list in listdetailview

--- a/VGApp/Util/Localizable.strings
+++ b/VGApp/Util/Localizable.strings
@@ -44,6 +44,7 @@
 "listDetailView_list_isActive_no"="nein";
 "listDetailView_list_isActive_ChangeTo_no"="Liste deaktivieren";
 "listDetailView_list_isActive_ChangeTo_yes"="Liste aktivieren";
+"listDetailView_list_delete"="Liste löschen";
 
 // ItemView
 "itemView_title"="Übersicht";
