Update recycle View

--- a/VGApp/Util/Localizable.strings
+++ b/VGApp/Util/Localizable.strings
@@ -61,6 +61,6 @@
 "newItem_item_code"="Nummer";
 "newItem_add_button_title"="Item hinzufügen";
 
-"newRecycle_title"="Neues Leergut";
+"newRecycle_title"="Leergut hinzufügen";
 "newRecycle_recycle_type"="Leergut Typ";
 "newRecycle_add_button_title"="Leergut hinzufügen";
