--- a/VGApp/Util/Localizable.strings
+++ b/VGApp/Util/Localizable.strings
@@ -62,6 +62,9 @@
 "newItem_item_code"="Nummer";
 "newItem_add_button_title"="Item hinzufügen";
 
+"editItem_title"="Item bearbeiten";
+"editItem_add_button_title"="Änderung speichern";
+
 "newRecycle_title"="Leergut hinzufügen";
 "newRecycle_recycle_type"="Leergut Typ";
 "newRecycle_add_button_title"="Leergut hinzufügen";
